Bug 305379 - Filter still applied after "Filter Torrents" bar closed
Summary: Filter still applied after "Filter Torrents" bar closed
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 307681 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-18 11:19 UTC by Alexander Potashev
Modified: 2012-10-18 18:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2012-08-18 11:19:49 UTC
Reproducible: Always

Steps to Reproduce:
1. Press "Ctrl+F" to open filter bar
2. Type something in the filter bar, so that some torrents become hidden from the list
3. Press "Esc" to close the filter bar, or click the close button.
Actual Results:  
The "filter torrents" bar is not visible anymore, but the filter is still applied to the list of torrents. Some users may forget about filtering and then fail to find some torrents.

Expected Results:  
Filter should be reset (cleared) when closing the filter bar.
Comment 1 Maarten De Meyer 2012-10-15 19:28:20 UTC
*** Bug 307681 has been marked as a duplicate of this bug. ***
Comment 2 Maarten De Meyer 2012-10-17 14:48:53 UTC
I have posted a patch here:
https://git.reviewboard.kde.org/r/106928/
Comment 3 Joris Guisson 2012-10-18 18:13:38 UTC
Git commit efeb9aa29622121a906406c104310fc3a2f58f64 by Joris Guisson.
Committed on 18/10/2012 at 20:13.
Pushed by guisson into branch 'master'.

Reset filter when the filterbar is closed
REVIEW: 106928

M  +1    -0    ChangeLog
M  +1    -0    ktorrent/main.cpp
M  +12   -2    ktorrent/view/torrentsearchbar.cpp
M  +5    -0    ktorrent/view/torrentsearchbar.h

http://commits.kde.org/ktorrent/efeb9aa29622121a906406c104310fc3a2f58f64