Reset filter when the filterbar is closed

BUG: 305379
REVIEW: 106928